--- a/index.html
+++ b/index.html
@@ -3,143 +3,146 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Get your iPhone 16 Pro Now! Limited time offer.">
-    <title>Get Your iPhone 16 Pro Now!</title>
+    <meta name="description" content="Get your iPhone 16 Pro today! Limited time offer. Claim your discount now.">
+    <meta name="keywords" content="iPhone, iPhone 16 Pro, Special Offer, Discount">
+    <meta name="author" content="iPhone 16 Pro">
+    <title>Get Your iPhone 16 Pro Today - Limited Time Offer</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
+        /* General Reset */
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
         }
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            color: #333;
+            line-height: 1.6;
         }
         header {
-            background: #2d2d2d;
-            color: #fff;
-            padding: 30px 0;
+            background: #FF2A68;
+            color: white;
+            padding: 20px 0;
             text-align: center;
         }
         header h1 {
-            font-size: 3em;
-            margin: 0;
+            font-size: 2.5em;
+            margin-bottom: 0.5em;
+        }
+        header p {
+            font-size: 1.2em;
+        }
+
+        /* Hero Section */
+        .hero {
+            text-align: center;
+            margin: 20px auto;
+            padding: 10px;
         }
         .hero img {
             width: 100%;
             max-width: 600px;
-            margin: 20px 0;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
+            border-radius: 10px;
+            margin-bottom: 20px;
         }
-        .button {
-            background-color: #ff2a68;
-            color: white;
-            padding: 15px 30px;
-            font-size: 18px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
+        .hero p {
+            font-size: 1.3em;
             margin: 10px 0;
         }
-        .button:hover {
+        .hero .cta-button {
+            background-color: #FF2A68;
+            color: white;
+            padding: 15px 30px;
+            font-size: 1.2em;
+            text-decoration: none;
+            border-radius: 5px;
+            cursor: pointer;
+            display: inline-block;
+            margin-top: 20px;
+        }
+        .hero .cta-button:hover {
             background-color: #e5005c;
         }
-        .cta {
-            text-align: center;
-            margin-top: 40px;
-        }
+
+        /* Urgency and Benefits Section */
         .section {
-            padding: 30px 0;
             text-align: center;
+            padding: 30px;
+            background: #fff;
+            margin-top: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
         .section h2 {
-            font-size: 2.5em;
+            font-size: 2em;
             margin-bottom: 20px;
         }
         .section p {
             font-size: 1.2em;
+            margin-bottom: 20px;
         }
-        .share-buttons {
-            margin-top: 20px;
+        .countdown {
+            font-size: 1.5em;
+            font-weight: bold;
+            color: #FF2A68;
         }
-        .share-buttons a {
-            text-decoration: none;
-            margin: 0 10px;
-            padding: 10px;
-            background-color: #3b5998;
-            color: white;
-            border-radius: 5px;
-            font-size: 16px;
-        }
-        .share-buttons a:hover {
-            background-color: #2d4373;
-        }
+
+        /* Footer */
         footer {
-            background: #2d2d2d;
-            color: #fff;
+            background: #333;
+            color: white;
+            padding: 10px 0;
             text-align: center;
-            padding: 10px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+            margin-top: 40px;
+        }
+
+        /* Responsive */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 2em;
+            }
+            header p {
+                font-size: 1em;
+            }
+            .hero img {
+                max-width: 100%;
+            }
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Get Your iPhone 16 Pro NOW!</h1>
-        <p>Limited Time Offer - Don’t miss out!</p>
+        <h1>Claim Your iPhone 16 Pro Now!</h1>
+        <p>Limited Time Offer - Get Yours Today</p>
     </header>
 
-    <div class="container">
-        <!-- Hero Section -->
-        <div class="hero">
-            <img src="https://www.apple.com/newsroom/images/2024/09/apple-debuts-iphone-16-pro-and-iphone-16-pro-max/tile/Apple-iPhone-16-Pro-hero-240909-lp.jpg.news_app_ed.jpg" alt="iPhone 16 Pro">
-            <p><strong>The iPhone 16 Pro is here, and it’s better than ever!</strong></p>
-            <p>Featuring incredible speed, stunning design, and unmatched performance.</p>
-            <a href="https://rockingfolders.com/show.php?l=0&u=173518&id=67278" class="button">Claim Your iPhone 16 Pro Now</a>
-        </div>
+    <div class="hero">
+        <img src="https://www.apple.com/newsroom/images/2024/09/apple-debuts-iphone-16-pro-and-iphone-16-pro-max/tile/Apple-iPhone-16-Pro-hero-240909-lp.jpg.news_app_ed.jpg" alt="iPhone 16 Pro">
+        <p><strong>Incredible speed, stunning design, and unmatched performance await you!</strong></p>
+        <p>Don’t miss out, this is your chance to get the brand new iPhone 16 Pro.</p>
+        <!-- Link to the offer in the button -->
+        <a href="https://rockingfolders.com/show.php?l=0&u=173518&id=67278" class="cta-button" target="_blank">Claim Your iPhone 16 Pro</a>
+    </div>
 
-        <!-- Why the iPhone 16 Pro Section -->
-        <div class="section">
-            <h2>Why the iPhone 16 Pro?</h2>
-            <p>High-Performance Chip. Stunning Display. Pro Camera System. Long-lasting Battery.</p>
-            <p>Experience the future with the new iPhone 16 Pro! Perfect for work, play, and everything in between.</p>
-            <a href="https://rockingfolders.com/show.php?l=0&u=173518&id=67278" class="button">Get Yours Now</a>
-        </div>
+    <div class="section">
+        <h2>Why Choose the iPhone 16 Pro?</h2>
+        <p>High-performance chip, stunning display, Pro camera system, long-lasting battery.</p>
+        <p><strong>Perfect for work, play, and everything in between!</strong></p>
+        <p class="countdown">Hurry! Only a few left at this price!</p>
+        <!-- Link to the offer in the button -->
+        <a href="https://rockingfolders.com/show.php?l=0&u=173518&id=67278" class="cta-button" target="_blank">Get Yours Now</a>
+    </div>
 
-        <!-- How to Get Yours Section -->
-        <div class="section">
-            <h2>How to Get Yours</h2>
-            <p>1. Click on the link below<br>2. Fill in your details<br>3. Get ready for your new iPhone!</p>
-            <a href="https://rockingfolders.com/show.php?l=0&u=173518&id=67278" class="button">Get Your iPhone Now</a>
-        </div>
-
-        <!-- Limited Time Offer Section -->
-        <div class="section">
-            <h2>Limited Time Offer!</h2>
-            <p>Stocks are running out! Act fast and grab your iPhone 16 Pro while it’s still available!</p>
-            <a href="https://rockingfolders.com/show.php?l=0&u=173518&id=67278" class="button">Claim Your iPhone 16 Pro</a>
-        </div>
-
-        <!-- Share Section -->
-        <div class="section">
-            <h2>Share & Save Big</h2>
-            <p>Want to help your friends get their iPhone 16 Pro too? Share this page on Facebook and unlock even more exciting deals!</p>
-            <div class="share-buttons">
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https://rockingfolders.com/show.php?l=0&u=173518&id=67278" target="_blank">Share on Facebook</a>
-                <a href="https://twitter.com/share?url=https://rockingfolders.com/show.php?l=0&u=173518&id=67278" target="_blank">Share on Twitter</a>
-                <a href="https://wa.me/?text=Get%20Your%20iPhone%2016%20Pro%20Now!%20%23iPhone16Pro%20https://rockingfolders.com/show.php?l=0&u=173518&id=67278" target="_blank">Share on WhatsApp</a>
-            </div>
-        </div>
+    <div class="section">
+        <h2>Get Yours in Just 3 Simple Steps:</h2>
+        <ol>
+            <li>Click the button below to claim your iPhone.</li>
+            <li>Fill out the form with your details on the next page.</li>
+            <li>Receive your iPhone 16 Pro at a discounted price!</li>
+        </ol>
+        <!-- Link to the offer in the button -->
+        <a href="https://rockingfolders.com/show.php?l=0&u=173518&id=67278" class="cta-button" target="_blank">Get My iPhone 16 Pro Now</a>
     </div>
 
     <footer>
