--- a/index.html
+++ b/index.html
@@ -1,98 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Complete the offer to continue browsing and access the content you love. Limited time offer!">
-    <meta name="keywords" content="iPhone 16 Pro, CPA, free offer, limited time, continue browsing, special offer">
-    <meta name="author" content="CPA Master">
-    <title>Complete the Offer to Continue Browsing</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f4f4f4;
-            font-family: Arial, sans-serif;
-        }
-
-        .popup-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .popup {
-            background-color: white;
-            border-radius: 10px;
-            padding: 40px;
-            box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
-            text-align: center;
-            width: 90%;
-            max-width: 500px;
-        }
-
-        .popup h2 {
-            font-size: 2em;
-            margin-bottom: 20px;
-        }
-
-        .popup p {
-            font-size: 1.2em;
-            margin-bottom: 20px;
-        }
-
-        .cta-button {
-            background-color: #FF2A68;
-            color: white;
-            font-size: 1.2em;
-            padding: 12px 30px;
-            text-decoration: none;
-            border-radius: 5px;
-            display: inline-block;
-            margin-top: 20px;
-        }
-
-        .cta-button:hover {
-            background-color: #e5005c;
-        }
-
-        .footer {
-            margin-top: 20px;
-            font-size: 0.9em;
-        }
-
-        /* Adding responsiveness */
-        @media (max-width: 768px) {
-            .popup h2 {
-                font-size: 1.8em;
-            }
-
-            .cta-button {
-                font-size: 1.1em;
-                padding: 10px 25px;
-            }
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Exclusive live stream. Complete a brief survey to watch the full video.">
+  <title>Exclusive Live Stream</title>
+  <style>
+    body {
+      margin: 0;
+      background-color: #000;
+      overflow: hidden; /* Remove scroll */
+    }
+    .video-container {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: #000;
+    }
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+      pointer-events: none; /* Prevent interaction with the video */
+    }
+    /* Overlay with message */
+    .overlay {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 80%;
+      max-width: 600px;
+      padding: 20px;
+      background: rgba(0, 0, 0, 0.8);
+      color: #fff;
+      font-size: 1.5rem;
+      text-align: center;
+      border-radius: 10px;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.3s ease-in-out;
+    }
+    .overlay.show {
+      opacity: 1;
+      pointer-events: all;
+    }
+    .overlay h1 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+    .overlay p {
+      font-size: 1rem;
+      margin-bottom: 20px;
+    }
+    .cta-btn {
+      display: inline-block;
+      background: red;
+      color: #fff;
+      text-decoration: none;
+      padding: 12px 20px;
+      font-size: 1.2rem;
+      border-radius: 5px;
+      transition: background 0.3s ease-in-out;
+    }
+    .cta-btn:hover {
+      background: darkred;
+    }
+  </style>
 </head>
 <body>
 
-<!-- Popup Container -->
-<div class="popup-container">
-    <div class="popup">
-        <h2>Almost There!</h2>
-        <p>To continue browsing and enjoy our content, please complete the short offer below.</p>
-        <a href="https://eradictrkr.com/pauldev" class="cta-button" target="_blank">Complete the Offer to Continue</a>
-        
-        <div class="footer">
-            <p>We value your privacy. Your information is safe and secure.</p>
-        </div>
-    </div>
-</div>
+  <!-- Video Container -->
+  <div class="video-container">
+    <!-- Iframe with the video (modified to hide controls) -->
+    <iframe 
+      id="videoIframe"
+      width="640" 
+      height="360" 
+      frameborder="0" 
+      src="https://mega.nz/embed/dfMBUJLS#JyrI7a3Iafxb7tVO5QARhUFaWx6eBM3PWQ8MUaENYS0" 
+      allow="autoplay; fullscreen" 
+      allowfullscreen>
+    </iframe>
 
-<!-- Bootstrap JS (Optional for other interactions) -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Overlay with message -->
+    <div class="overlay" id="overlay">
+      <h1>Attention! Exclusive Content</h1>
+      <p>This video is restricted to those over 18. Complete a brief survey to continue watching the live stream.</p>
+      <a href="https://eradictrkr.com/pauldev" class="cta-btn" target="_blank">Complete Survey and Watch Live</a>
+    </div>
+  </div>
+
+  <!-- JavaScript to handle the video and overlay -->
+  <script>
+    const overlay = document.getElementById('overlay');
+    const iframe = document.getElementById('videoIframe');
+
+    // Function to start the video automatically
+    function startVideo() {
+      setTimeout(() => {
+        // Play the video automatically
+        iframe.src = "https://mega.nz/embed/dfMBUJLS#JyrI7a3Iafxb7tVO5QARhUFaWx6eBM3PWQ8MUaENYS0";
+      }, 0);  // Starts immediately
+    }
+
+    // Function to show the overlay after 5 seconds
+    function showOverlay() {
+      setTimeout(() => {
+        overlay.classList.add('show');
+      }, 5000);  // Show overlay after 5 seconds
+    }
+
+    // Start functions
+    startVideo();
+    showOverlay();
+  </script>
 
 </body>
 </html>
-
