--- a/index.html
+++ b/index.html
@@ -71,6 +71,39 @@
     .cta-btn:hover {
       background: darkred;
     }
+
+    /* Exit Intent Popup */
+    #exit-popup {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.7);
+      color: white;
+      text-align: center;
+      padding-top: 20%;
+      z-index: 9999;
+    }
+    #exit-popup h2 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+    #exit-popup p {
+      font-size: 1rem;
+      margin-bottom: 20px;
+    }
+    #exit-popup a {
+      color: white;
+      background-color: #FF5733;
+      padding: 10px 20px;
+      text-decoration: none;
+      border-radius: 5px;
+    }
+    #exit-popup a:hover {
+      background-color: #C74325;
+    }
   </style>
 </head>
 <body>
@@ -96,10 +129,19 @@
     </div>
   </div>
 
-  <!-- JavaScript to handle the video and overlay -->
+  <!-- Exit Intent Popup -->
+<div id="exit-popup">
+  <h2>Wait! Don’t Leave Yet...</h2>
+  <p>Almost there! Complete a short survey to unlock full access to this exclusive live stream.</p>
+  <a href="https://eradictrkr.com/pauldev" target="_blank">Complete Survey and Unlock Stream</a>
+</div>
+
+
+  <!-- JavaScript to handle the video, overlay and exit intent popup -->
   <script>
     const overlay = document.getElementById('overlay');
     const iframe = document.getElementById('videoIframe');
+    const exitPopup = document.getElementById('exit-popup');
 
     // Function to start the video automatically
     function startVideo() {
@@ -115,6 +157,13 @@
         overlay.classList.add('show');
       }, 5000);  // Show overlay after 5 seconds
     }
+
+    // Show the exit intent popup when user tries to leave the page
+    document.addEventListener('mouseleave', function (event) {
+      if (!event.toElement && !event.relatedTarget) {
+        exitPopup.style.display = 'block'; // Show exit intent popup
+      }
+    });
 
     // Start functions
     startVideo();
