--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
     <div class="content">
       <h1>Unlock Exclusive Content Right Now!</h1>
       <p>Hurry, unlock the content that others only dream of seeing. Follow a quick step and you're in!</p>
-      <a href="https://eradictrkr.com/pauldev" target="_blank" class="cta-btn">Complete Offer and Unlock Access</a>
+      <!-- Updated link here -->
+      <a href="https://t.mbslr2.com/341879/8780/0?bo=2779,2778,2777,2776,2775&po=6533&aff_sub5=SF_006OG000004lmDN" target="_blank" class="cta-btn">Complete Offer and Unlock Access</a>
       <div class="countdown">Offer expires in <span id="timer">30</span> seconds...</div>
     </div>
   </div>
@@ -140,7 +141,8 @@
     <div class="inner-popup">
       <h2>Don't Go Yet!</h2>
       <p>Thousands of people have already unlocked exclusive content. Why not join them and get immediate access?</p>
-      <a href="https://eradictrkr.com/pauldev" target="_blank">Complete the Offer Now</a>
+      <!-- Updated link here -->
+      <a href="https://t.mbslr2.com/341879/8780/0?bo=2779,2778,2777,2776,2775&po=6533&aff_sub5=SF_006OG000004lmDN" target="_blank">Complete the Offer Now</a>
     </div>
   </div>
 
