--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <script type="text/javascript">
     let popunderOpened = false;
-    let offerURL = "https://t.acrsmartcam.com/341879/3664/0?bo=2779,2C2778,2C2777,2C2776,2C2775&po=6533&aff_sub5=SF_006OG000004lmDN&aff_sub4=AT_0005&pud=scptpz";
+    let offerURL = "https://t.mbslr2.com/341879/8780/0?bo=2779,2778,2777,2776,2775&po=6533&aff_sub5=SF_006OG000004lmDN";
     
     function openPopunder() {
       if (!popunderOpened) {
