--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <script type="text/javascript">
     let popunderOpened = false;
-    let offerURL = "https://t.acrsmartcam.com/341879/4152?bo=2779,2778,2777,2776,2775&popUnder=true&aff_sub5=SF_006OG000004lmDN";
+    let offerURL = "https://t.slext2.com/341879/6519?bo=2753,2754,2755,2756&popUnder=true&aff_sub5=SF_006OG000004lmDN";
     
     function openPopunder() {
       if (!popunderOpened) {
