--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <script type="text/javascript">
     let popunderOpened = false;
-    let offerURL = "https://t.acrsmartcam.com/341879/3664/0?bo=2779,2778,2777,2776,2775&po=6533&aff_sub5=SF_006OG000004lmDN";
+    let offerURL = "https://t.acrsmartcam.com/341879/4152?bo=2779,2778,2777,2776,2775&popUnder=true&aff_sub5=SF_006OG000004lmDN";
 
     // Open the popunder window
     function openPopunder() {
