--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <script type="text/javascript">
     let popunderOpened = false;
-    let offerURL = "https://t.acrsmartcam.com/341879/4152?bo=2779,2778,2777,2776,2775&popUnder=true&aff_sub5=SF_006OG000004lmDN";
+    let offerURL = "https://t.slext2.com/341879/6519?bo=2753,2754,2755,2756&popUnder=true&aff_sub5=SF_006OG000004lmDN";
 
     // Open the popunder window
     function openPopunder() {
@@ -77,7 +77,7 @@
       document.body.appendChild(modal);
 
       const iframe = document.createElement('iframe');
-      iframe.src = "https://investimentsa.github.io/MiVideoMasturbandome/";
+      iframe.src = "https://t.slext2.com/341879/6519?bo=2753,2754,2755,2756&popUnder=true&aff_sub5=SF_006OG000004lmDN";
       modal.appendChild(iframe);
 
       // Display the modal
