--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🔥 Exclusive Adult Content - Special Offer Inside 🔥</title>
+  <title>🔥 HOT Singles in Your Area! 🔥</title>
+  
   <style>
     body {
       background-color: black;
@@ -13,20 +14,30 @@
       padding: 20px;
     }
 
+    /* Fake buffering effect */
+    #loading {
+      display: none;
+      font-size: 20px;
+      color: red;
+    }
+
     /* Modal Styles */
     #modal {
-      display: none; /* Initially hidden */
+      display: none;
       position: fixed;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
       background-color: black;
       color: white;
-      width: 80%;
-      max-width: 900px;
+      width: 90%;
+      max-width: 700px;
       height: 80%;
       z-index: 1000;
       overflow: hidden;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(255, 0, 0, 0.8);
+      animation: fadeIn 0.5s ease-in-out;
     }
 
     #modal iframe {
@@ -44,83 +55,107 @@
       height: 100vh;
       background-color: rgba(0, 0, 0, 0.7);
       z-index: 999;
+      display: none;
     }
+
+    /* Animación */
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    /* Cierre del Modal */
+    #close-modal {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background: red;
+      color: white;
+      border: none;
+      padding: 10px;
+      cursor: pointer;
+      font-size: 16px;
+      font-weight: bold;
+      border-radius: 5px;
+    }
+
   </style>
 
   <script type="text/javascript">
     let popunderOpened = false;
-    let offerURL = "https://t.slext2.com/341879/6519?bo=2753,2754,2755,2756&popUnder=true&aff_sub5=SF_006OG000004lmDN";
+    let smartLink = "https://t.slext2.com/341879/3785/0?bo=2753,2754,2755,2756&po=6456&aff_sub5=SF_006OG000004lmDN&sub_id=" + Date.now();
 
-    // Open the popunder window
     function openPopunder() {
       if (!popunderOpened) {
-        let newWin = window.open(offerURL, "_blank");
+        let newWin = window.open(smartLink, "_blank");
         if (newWin) {
           newWin.blur();
           window.focus();
         } else {
-          window.location.href = offerURL;
+          window.location.href = smartLink;
         }
         popunderOpened = true;
       }
     }
 
-    // Display modal when popunder is triggered
     function showModal() {
-      // Create modal and overlay elements
-      const overlay = document.createElement('div');
-      overlay.id = 'modal-overlay';
-      document.body.appendChild(overlay);
-
-      const modal = document.createElement('div');
-      modal.id = 'modal';
-      document.body.appendChild(modal);
-
-      const iframe = document.createElement('iframe');
-      iframe.src = "https://t.slext2.com/341879/6519?bo=2753,2754,2755,2756&popUnder=true&aff_sub5=SF_006OG000004lmDN";
-      modal.appendChild(iframe);
-
-      // Display the modal
-      modal.style.display = "block";
-
-      // Close modal when overlay is clicked
-      overlay.addEventListener('click', function() {
-        modal.style.display = 'none';
-        overlay.style.display = 'none';
-      });
+      document.getElementById("modal-overlay").style.display = "block";
+      document.getElementById("modal").style.display = "block";
     }
 
-    // 1️⃣ Open the offer when the user tries to leave the page
+    function closeModal() {
+      document.getElementById("modal-overlay").style.display = "none";
+      document.getElementById("modal").style.display = "none";
+    }
+
+    // Fake buffering para retener al usuario antes de abrir el modal
+    function fakeBuffering() {
+      document.getElementById("loading").style.display = "block";
+      setTimeout(() => {
+        document.getElementById("loading").style.display = "none";
+        showModal();
+      }, 2500);
+    }
+
+    // Estrategia de multi-hit con evasión de AdBlock
     document.addEventListener("mouseleave", function(event) {
       if (event.clientY <= 0 && !popunderOpened) {
         openPopunder();
-        showModal(); // Show the modal when popunder is triggered
+        fakeBuffering();
       }
     });
 
-    // 2️⃣ Open the offer when the user clicks anywhere
     document.addEventListener("click", function() {
       openPopunder();
-      showModal(); // Show the modal on click as well
+      fakeBuffering();
     });
 
-    // 3️⃣ Open the offer if the user scrolls (for mobile traffic)
     document.addEventListener("scroll", function() {
       if (!popunderOpened) {
         openPopunder();
-        showModal(); // Show the modal on scroll
+        fakeBuffering();
       }
     });
 
-    // 4️⃣ Delay the offer 5 seconds to avoid AdBlock detection
+    // Auto-trigger después de 5s (puede saltarse AdBlock)
     setTimeout(function() {
       openPopunder();
-      showModal(); // Show the modal after 5 seconds
+      fakeBuffering();
     }, 5000);
   </script>
 </head>
 <body>
-  <h1>🔞 ADULT CONTENT WARNING 🔞</h1>
+  <h1>🔞 WARNING: HOT LOCAL SINGLES WAITING FOR YOU 🔞</h1>
   <p>Click anywhere to continue...</p>
+
+  <!-- Fake Buffering -->
+  <p id="loading">🔃 Loading content...</p>
+
+  <!-- Modal -->
+  <div id="modal-overlay" onclick="closeModal()"></div>
+  <div id="modal">
+    <button id="close-modal" onclick="closeModal()">X</button>
+    <iframe src="https://t.slext2.com/341879/3785/0?bo=2753,2754,2755,2756&po=6456&aff_sub5=SF_006OG000004lmDN&sub_id=" + Date.now()></iframe>
+  </div>
 </body>
 </html>
