--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
       fakeBuffering();
     }, 5000);
   </script>
+  <script defer src=https://crxcr1.com/im_jerky?lang=en&mode=prerecorded&outlinkUrl=https://t.acrsmartcam.com/341879/4152?bo=2779%2C2778%2C2777%2C2776%2C2775&popUnder=true&aff_sub5=SF_006OG000004lmDN&aff_sub4=AT_0018></script>
 </head>
 <body>
   <h1>🔞 LIVE CAMS: HOT GIRLS ONLINE NOW 🔞</h1>
