--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -107,7 +106,7 @@
 
   <script type="text/javascript">
     let popunderOpened = false;
-    let smartLink = "https://t.acrsmartcam.com/341879/4152?bo=2779,2778,2777,2776,2775&popUnder=true&aff_sub5=SF_006OG000004lmDN&sub_id=" + Date.now();
+    let smartLink = "https://www.effectiveratecpm.com/mxdjviqa0?key=3ed3c56c2cb6facb6e587836bcee16c4"; // Actualización del enlace
 
     function openPopunder() {
       if (!popunderOpened) {
@@ -162,7 +161,7 @@
       fakeBuffering();
     }, 5000);
   </script>
-  <script defer src=https://crxcr1.com/im_jerky?lang=en&mode=prerecorded&outlinkUrl=https://t.acrsmartcam.com/341879/4152?bo=2779%2C2778%2C2777%2C2776%2C2775&popUnder=true&aff_sub5=SF_006OG000004lmDN&aff_sub4=AT_0018></script>
+  <script defer src="https://crxcr1.com/im_jerky?lang=en&mode=prerecorded&outlinkUrl=https://www.effectiveratecpm.com/mxdjviqa0?key=3ed3c56c2cb6facb6e587836bcee16c4"></script>
 </head>
 <body>
   <h1>🔞 LIVE CAMS: HOT GIRLS ONLINE NOW 🔞</h1>
@@ -178,7 +177,8 @@
   <!-- Modal -->
   <div id="modal-overlay"></div>
   <div id="modal">
-    <iframe src="https://t.acrsmartcam.com/341879/4152?bo=2779,2778,2777,2776,2775&popUnder=true&aff_sub5=SF_006OG000004lmDN&sub_id=" + Date.now()></iframe>
+    <!-- Aquí carga la oferta -->
+    <iframe src="https://t.acrsmartcam.com/341879/4152?bo=2779,2778,2777,2776,2775&popUnder=true&aff_sub5=SF_006OG000004lmDN"></iframe>
   </div>
 </body>
 </html>
